add command alias and hub command