@@ -5,18 +5,21 @@ import dev.kyriji.common.commands.enums.ExecutorType;
 import dev.kyriji.common.commands.models.TritonCommand;
 import dev.kyriji.common.models.TritonCommandSender;
 import dev.kyriji.common.models.TritonPlayer;
-import dev.kyriji.common.playerdata.controllers.PlayerDataManager;
-import dev.kyriji.common.playerdata.documents.NetworkData;
 import dev.kyriji.common.playerdata.enums.Permission;
-import dev.kyriji.common.playerdata.enums.PlayerDataType;
+import dev.wiji.bigminecraftapi.BigMinecraftAPI;
 
 import java.util.Arrays;
 import java.util.List;
 
-public class PlayerDataTestCommand extends TritonCommand {
+public class LobbyCommand extends TritonCommand {
 	@Override
 	public String getIdentifier() {
-		return "playerdata";
+		return "lobby";
+	}
+
+	@Override
+	public List<String> getAliases() {
+		return List.of("l", "hub");
 	}
 
 	@Override
@@ -26,12 +29,12 @@ public class PlayerDataTestCommand extends TritonCommand {
 
 	@Override
 	public Permission getPermission() {
-		return Permission.STAFF;
+		return null;
 	}
 
 	@Override
 	public CommandType getCommandType() {
-		return CommandType.SERVER;
+		return CommandType.PROXY;
 	}
 
 	@Override
@@ -41,26 +44,13 @@ public class PlayerDataTestCommand extends TritonCommand {
 
 	@Override
 	public List<String> getTabCompletions(TritonCommandSender sender, String[] args) {
-		return Arrays.asList("test1", "test2", "test3");
+		return List.of();
 	}
 
 	@Override
 	public void execute(TritonCommandSender sender, String[] args) {
 		TritonPlayer player = (TritonPlayer) sender;
-
-		NetworkData document = PlayerDataManager.getPlayerData(player.getUuid(), PlayerDataType.NETWORK);
-		if(document == null) {
-			player.sendMessage("Failed to load player data");
-			return;
-		}
-
-		if(args.length >= 1 && args[0].equals("save")) {
-			document.setName(player.getName());
-			document.save();
-			return;
-		}
-
-		player.sendMessage(document.getName());
+		BigMinecraftAPI.getNetworkManager().queuePlayer(player.getUuid(), "lobby");
 	}
 
 }
